add tmux plugin to allow mouse select and copy

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,17 @@
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
 # mouse behavior
 setw -g mouse on
+
+bind-key m set -g mouse on
+
+# Toggle mouse off
+bind-key M set -g mouse off
 
 # use vim-like keys for splits and windows
 bind-key v split-window -h
@@ -8,3 +20,5 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+run '~/.tmux/plugins/tpm/tpm'
